# smithy-rs-demo

./: .gitignore  Cargo.toml  gradle.properties  settings.gradle.kts
model/: pokemon.smithy  smithy-build.json  solarsystem.smithy
pokemon-service/src/: lib.rs
solar-system-catalog/: Cargo.toml
solar-system-catalog/src/: lib.rs  main.rs  state.rs
